--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 body {
     margin: 0;
 }
+
+ul {
+    list-style-type: none;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.ais-SearchBox-input {
+    background-color: 'red';
+    color: 'green';
+}
